--- a/dotnet-pipeline.yml
+++ b/dotnet-pipeline.yml
@@ -14,6 +14,8 @@ steps:
 - checkout: MyDotNetRepo
 - script: echo "Running this job on $(Agent.OS) with name $(Agent.Name) and version $(Agent.Version)"
   displayName: 'Showing OS of the agent'
+- script: az version
+  displayName: 'Showing Azure CLI version'
 - task: UseDotNet@2
   inputs:
     packageType: 'sdk'
