Commented out UseDotNet task in dotnet-pipeline.yml

--- a/dotnet-pipeline.yml
+++ b/dotnet-pipeline.yml
@@ -16,9 +16,9 @@ steps:
   displayName: 'Showing OS of the agent'
 - script: az version
   displayName: 'Showing Azure CLI version'
-- task: UseDotNet@2
-  inputs:
-    packageType: 'sdk'
-    version: '8.x'
+# - task: UseDotNet@2
+#   inputs:
+#     packageType: 'sdk'
+#     version: '8.x'
 - script: dotnet build --configuration Release
   displayName: 'Building the project'
