Remove Dockerfile and start.sh scripts

--- a/ado-agent/Dockerfile
+++ b/ado-agent/Dockerfile
@@ -14,17 +14,15 @@ RUN DEBIAN_FRONTEND=noninteractive apt-get install -y -qq --no-install-recommend
     jq \
     lsb-release \
     software-properties-common \
-    wget 
+    wget
+
+RUN wget https://packages.microsoft.com/config/ubuntu/22.04/packages-microsoft-prod.deb -O packages-microsoft-prod.deb \
+&& dpkg -i packages-microsoft-prod.deb \
+&& rm packages-microsoft-prod.deb
+
+RUN apt-get update && apt-get install -y dotnet-host dotnet-sdk-8.0
 
 RUN curl -sL https://aka.ms/InstallAzureCLIDeb | bash
-
-# Install .NET
-RUN wget https://dot.net/v1/dotnet-install.sh -O dotnet-install.sh \
-    && chmod +x dotnet-install.sh \
-    && ./dotnet-install.sh --version latest \
-    && rm dotnet-install.sh \
-    && ln -s /usr/share/dotnet/dotnet /usr/bin/dotnet
-
 
 # Can be 'linux-x64', 'linux-arm64', 'linux-arm', 'rhel.6-x64'.
 ENV TARGETARCH=linux-x64
