Add libicu66 and openjdk-8-jdk to Dockerfile, set JAVA_HOME environment variable

--- a/ado-agent/Dockerfile
+++ b/ado-agent/Dockerfile
@@ -14,7 +14,9 @@ RUN DEBIAN_FRONTEND=noninteractive apt-get install -y -qq --no-install-recommend
     jq \
     lsb-release \
     software-properties-common \
-    wget
+    wget \
+    libicu66 \
+    openjdk-8-jdk
 
 RUN wget https://packages.microsoft.com/config/ubuntu/22.04/packages-microsoft-prod.deb -O packages-microsoft-prod.deb \
 && dpkg -i packages-microsoft-prod.deb \
@@ -26,6 +28,8 @@ RUN curl -sL https://aka.ms/InstallAzureCLIDeb | bash
 
 # Can be 'linux-x64', 'linux-arm64', 'linux-arm', 'rhel.6-x64'.
 ENV TARGETARCH=linux-x64
+ENV JAVA_HOME=/usr/lib/jvm/java-8-openjdk-amd64
+RUN export JAVA_HOME
 
 WORKDIR /azp
 
