Add nuget installation step to Dockerfile

--- a/windows-ado-agent/Dockerfile
+++ b/windows-ado-agent/Dockerfile
@@ -1,5 +1,8 @@
 FROM mcr.microsoft.com/windows/servercore:ltsc2022
 
+# Install nuget
+
+
 # Install .NET Framework 3.5
 RUN powershell -Command Add-WindowsFeature NET-Framework-45-ASPNET ; \
     Add-WindowsFeature Web-Asp-Net45
