--- a/pipelines/legacy-pipeline.yml
+++ b/pipelines/legacy-pipeline.yml
@@ -6,6 +6,8 @@ pool: win-agents-on-aks
 steps:
 - checkout: git://WebApiDotNetFramework
 - script: echo "Running this job on $(Agent.OS) with name $(Agent.Name) and version $(Agent.Version)"
+- script: echo "Check working directory"
+  workingDirectory: $(System.DefaultWorkingDirectory)
   displayName: 'Showing OS of the agent'
 - script: nuget restore WebApiDotNetFramework.sln
   displayName: 'Restoring NuGet packages'
